Updated integration documentation
