# src/main/java/eu/clarin/cmdi/virtualcollectionregistry/rest/VirtualCollectionFormSubmissionResource.java
@@ -64,7 +64,7 @@ import org.springframework.beans.factory.annotation.Autowired;
  * 
  * @author twagoo
  */
-@Path("/submit")
+//@Path("/submit")
 public class VirtualCollectionFormSubmissionResource {
 
     @Autowired
@@ -334,7 +334,6 @@ public class VirtualCollectionFormSubmissionResource {
             html += "</html>\n";
             return html;
         }
-        
         private String getFooter() {
             String html = "";
             html += "<footer id=\"footer\">\n";
